Added Student functionality to view a specific class.

--- a/pages/templates/teacherClassViewSpecific.html
+++ b/pages/templates/teacherClassViewSpecific.html
@@ -147,8 +147,8 @@
                   </div>
                 </div>
                 {% endfor %}
-              {% if assignmentsA != 0 %}
-              <center><h1>Assignments <span class="badge badge-secondary">1</span></h1></center>
+              {% if assignmentsC != 0 %}
+              <center><h1>Assignments <span class="badge badge-secondary">{{assignmentsC}}</span></h1></center>
               {% for assignment in assignments%}
               <div class="card class-card">
                 <div class="card-body">
