Fixed some links

--- a/pages/templates/studentAssignment.html
+++ b/pages/templates/studentAssignment.html
@@ -65,7 +65,7 @@
                       Classes
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/class/add">Add Class</a>
+                      <a class="dropdown-item" href="/class/student/join">Join a Class</a>
                       <a class="dropdown-item" href="/class/view">View Classes</a>
                     </div>
                   </li>
