--- a/pages/templates/teacherHome.html
+++ b/pages/templates/teacherHome.html
@@ -140,7 +140,7 @@
             <div class="card card-3">
               <div class="card-body">
                 <h5 class="card-title">Create a Class</h5>
-                <p class="card-text">Create a class, that a student can join via the class code..</p><br>
+                <p class="card-text">Create a class, that a student can join via the class code.</p><br>
                 <a href="/class/add" class="btn btn-primary">Create a Class</a>
               </div>
             </div>
