--- a/pages/templates/studentClassViewSpecific.html
+++ b/pages/templates/studentClassViewSpecific.html
@@ -66,7 +66,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="/class/student/join">Join a Class</a>
-                      <a class="dropdown-item" href="/class/teacher/view">View Classes</a>
+                      <a class="dropdown-item" href="/class/student/view">View Classes</a>
                     </div>
                   </li>
                   <li class="nav-item dropdown">
