Grammar Error Fix.

--- a/pages/templates/studentAssignment_add.html
+++ b/pages/templates/studentAssignment_add.html
@@ -34,7 +34,7 @@
 			<form method="POST" class="contact100-form validate-form">
 				{% csrf_token %}
 				<span class="contact100-form-title">
-					Create a Assignment
+					Create an Assignment
 				</span>
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter a valid assignment name">
