--- a/pages/templates/teacherHome.html
+++ b/pages/templates/teacherHome.html
@@ -1,132 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>The Homework Manager</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/static/landing_page/css/bootstrap.min.css" />
-    <!-- animate CSS -->
-    <link rel="stylesheet" href="/static/landing_page/css/animate.css" />
-    <!-- themify CSS -->
-    <link rel="stylesheet" href="/static/landing_page/css/themify-icons.css" />
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" href="/static/landing_page/css/magnific-popup.css" />
-    <!-- swiper CSS -->
-    <link rel="stylesheet" href="/static/landing_page/css/slick.css" />
-    <!-- style CSS -->
-    <link rel="stylesheet" href="/static/landing_page/css/style.css" />
+{% extends "teacherBase.html" %}
 
-  </head>
-
-  <body>
-    <!--::header part start::-->
-    <header class="main_menu home_menu">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-12">
-            <nav class="navbar navbar-expand-lg navbar-light">
-              <a class="navbar-brand" href="/home">
-                <img src="/static/landing_page/img/logo.png" alt="logo" />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="ti-menu"></span>
-              </button>
-
-              <div
-                class="collapse navbar-collapse main-menu-item justify-content-center"
-                id="navbarSupportedContent"
-              >
-                <ul class="navbar-nav align-items-center">
-                  <li class="nav-item">
-                    <a class="nav-link" href="/home">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      id="navbarDropdown"
-                      role="button"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                    >
-                      Classes
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/class/add">Create a Class</a>
-                      <a class="dropdown-item" href="/class/teacher/view">View Classes</a>
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      id="navbarDropdown"
-                      role="button"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                    >
-                      Homework Assignments
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/homework/add">Add Homework</a>
-                      <a class="dropdown-item" href="/homework/view">View Homework</a>
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-                    <a
-                      class="nav-link dropdown-toggle"
-                      id="navbarDropdown"
-                      role="button"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                    >
-                      <i class='fas'>&#xf007;</i> {{request.user.first_name}}
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/profile/edit">Edit Profile</a>
-                      <a class="dropdown-item" href="/profile/password/change">Change Password</a>
-                    </div>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/logout">Log Out</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- Header part end-->
-
-    <style>
-      .card-3{
-      transition: 0.3s;
-      margin-bottom: 15px;
-      }
-
-      .card-3:hover{
-        transform: scale(1.2, 1.2);
-        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25),
-    -5px -5px 30px 15px rgba(0,0,0,0.22);
-      }
-
-    </style>
+{% block main-content %}
 
     <!-- banner part start-->
     <section class="banner_part background_teal">
@@ -169,22 +43,5 @@
 
       </div>
     </section>
-    <!-- banner part start-->
 
-
-    <!-- jquery plugins here-->
-    <script src="/static/landing_page/js/jquery-1.12.1.min.js"></script>
-    <!-- popper js -->
-    <script src="/static/landing_page/js/popper.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="/static/landing_page/js/bootstrap.min.js"></script>
-    <!-- easing js -->
-    <script src="/static/landing_page/js/jquery.magnific-popup.js"></script>
-    <!-- isotope js -->
-    <script src="/static/landing_page/js/isotope.pkgd.min.js"></script>
-    <!-- particles js -->
-    <script src="/static/landing_page/js/jquery.nice-select.min.js"></script>
-    <!-- custom js -->
-    <script src="/static/landing_page/js/custom.js"></script>
-  </body>
-</html>
+{% endblock %}
