--- a/pages/templates/typeOfUser.html
+++ b/pages/templates/typeOfUser.html
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<br><br><center><h1>Are you a Teacher of Student?</h1></center><br><br>
+<br><br><center><h1>Are you a Teacher or a Student?</h1></center><br><br>
 
 <style>
       .card-3{
