Added Class Edit feature.

--- a/pages/templates/teacherBase.html
+++ b/pages/templates/teacherBase.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="/static/landing_page/css/slick.css" />
     <!-- style CSS -->
     <link rel="stylesheet" href="/static/landing_page/css/style.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="/static/style.css">
 
   </head>
     <!--::header part start::-->
