--- a/pages/templates/studentAssignment.html
+++ b/pages/templates/studentAssignment.html
@@ -14,7 +14,7 @@
                   <div class="card class-card">
                     <div class="card-body">
                       <a>{{assignment.name}}</a>&nbsp;
-                      <a href = "/home" title = "View" class = "btn btn-primary">👁</a>
+                      <!-- <a href = "/home" title = "View" class = "btn btn-primary">👁</a> -->
                       <a href = "/homework/done/{{assignment.id}}" title = "Mark as Done" class = "btn btn-success">✓</a>
                     </div>
                   </div>
