--- a/pages/templates/studentHome.html
+++ b/pages/templates/studentHome.html
@@ -14,7 +14,7 @@
 
         <div class="row">
           <div class="col-sm-4">
-            <div class="card card-3">
+            <div class="card card-3 home-card">
               <div class="card-body">
                 <h5 class="card-title">Join a Class</h5>
                 <p class="card-text">Join your first class, a class is created by your course teacher.</p><br>
@@ -24,7 +24,7 @@
           </div>
 
           <div class="col-sm-4">
-            <div class="card card-3">
+            <div class="card card-3 home-card">
               <div class="card-body">
                 <h5 class="card-title">Create an Assignment</h5>
                 <p class="card-text">Create a assignment without being registered in a class (Ex. Multiplication Practice).</p><br>
@@ -34,7 +34,7 @@
           </div>
 
           <div class="col-sm-4">
-            <div class="card card-3">
+            <div class="card card-3 home-card">
               <div class="card-body">
                 <h5 class="card-title">View Assignments</h5>
                 <p class="card-text">View all the assignments you have to do and mark them done when finished.</p><br>
