--- a/pages/templates/teacherHome.html
+++ b/pages/templates/teacherHome.html
@@ -11,7 +11,7 @@
 
         <div class="row">
           <div class="col-sm-4">
-            <div class="card card-3">
+            <div class="card card-3 home-card">
               <div class="card-body">
                 <h5 class="card-title">Create a Class</h5>
                 <p class="card-text">Create a class, that a student can join via the class code.</p><br>
@@ -21,17 +21,17 @@
           </div>
 
           <div class="col-sm-4">
-            <div class="card card-3">
-              <div class="card-body">
-                <h5 class="card-title">Assign an Assignment</h5>
-                <p class="card-text">An Assignment is something that you can assign to everyone in your class (Ex. Multiplication Practice).</p><br>
-                <a href="/homework/add" class="btn btn-primary">Assign an assignment</a>
-              </div>
-            </div>
+                <div class="card card-3 home-card">
+                  <div class="card-body">
+                    <h5 class="card-title">Assign an Assignment</h5>
+                    <p class="card-text">An Assignment is something that you can assign to everyone in your class (Ex. Multiplication Practice).</p><br>
+                    <a href="/homework/add" class="btn btn-primary">Assign an assignment</a>
+                  </div>
+                </div>
           </div>
 
           <div class="col-sm-4">
-            <div class="card card-3">
+            <div class="card card-3 home-card">
               <div class="card-body">
                 <h5 class="card-title">Manage Classes</h5>
                 <p class="card-text">Manage everyone in your class, as well as the assignments in your class.</p><br>
