--- a/pages/templates/studentBase.html
+++ b/pages/templates/studentBase.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="/static/landing_page/css/slick.css" />
     <!-- style CSS -->
     <link rel="stylesheet" href="/static/landing_page/css/style.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="/static/style.css">
 
   </head>
 
@@ -112,21 +114,6 @@
       </div>
     </header>
     <!-- Header part end-->
-
-    <style>
-      .class-card{
-      transition: 0.3s;
-      margin-bottom: 15px;
-      width: 1080px;
-      }
-
-      .class-card:hover{
-        transform: scale(1.2, 1.2);
-        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25),
-    -5px -5px 30px 15px rgba(0,0,0,0.22);
-      }
-
-    </style>
 
 <body>
     {% block main-content %}
