--- a/pages/templates/studentClassViewSpecific.html
+++ b/pages/templates/studentClassViewSpecific.html
@@ -9,7 +9,8 @@
           <div class="col-lg-12">
             <div class="banner_text"><br><br><br><br><br>
                 <center><h1>{{class.name}}</h1>
-                <h3 style = 'color: white;'>(Class Code: {{class.code}})</h3><br><br><br>
+                <h3 style = 'color: white;'>(Class Code: {{class.code}})</h3>
+                <p style = 'color: white;'>{{ class.description }}</p><br><br><br>
                 <h1>Assignments <span class="badge badge-secondary">{{assignmentsA}}</span></h1></center>
 
                 {% for assignment in assignments %}
