--- a/static/style.css
+++ b/static/style.css
@@ -5,3 +5,23 @@
 .edit-title:hover{
   color: #e83d3d;
 }
+
+.class-card{
+      transition: 0.3s;
+      margin-bottom: 15px;
+      width: 1080px;
+}
+
+.home-card{
+  transition: 0.3s;
+}
+
+.home-card:hover{
+        transform: scale(1.1, 1.1);
+        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), -5px -5px 30px 15px rgba(0,0,0,0.22);
+}
+
+.class-card:hover{
+        transform: scale(1.1, 1.1);
+        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), -5px -5px 30px 15px rgba(0,0,0,0.22);
+}
