--- a/pages/templates/studentClassViewSpecific.html
+++ b/pages/templates/studentClassViewSpecific.html
@@ -17,7 +17,7 @@
                 <div class="card class-card">
                   <div class="card-body">
                     <a>{{assignment.name}}</a>
-                    <a href = "/home" title = "View" class = "btn btn-primary">👁</a>
+                    <a href = "/homework/student/view/{{ assignment.id }}" title = "View" class = "btn btn-primary">👁</a>
                   </div>
                 </div>
               {% endfor %}
