Major Updates, updated class view, added assignment edit.

--- a/pages/templates/studentBase.html
+++ b/pages/templates/studentBase.html
@@ -83,7 +83,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="/homework/add">Add Homework</a>
-                      <a class="dropdown-item" href="/homework/view">View Homework</a>
+                      <a class="dropdown-item" href="/homework/student/view">View Homework</a>
                     </div>
                   </li>
                   <li class="nav-item dropdown">
