--- a/pages/templates/studentAssignmentViewSpecific.html
+++ b/pages/templates/studentAssignmentViewSpecific.html
@@ -9,11 +9,31 @@
           <div class="col-lg-12">
             <div class="banner_text"><br><br><br><br><br>
                 <center><h1>{{assignment.name}}</h1>
-                <p style = 'color: white;'>{{ assignment.description }}</p><br><br><br>
-                {% if assignment.done %}
-                    <a class = "btn btn-danger" href = "/homework/undone/{{ assignment.id }}">Mark Assignment as not Done</a>
-                {% elif assignment.linked_model_assignment %}
-                    <a class = "btn btn-success" href = "/homework/done/{{ assignment.id }}">Mark Assignment as Done</a>
+                        <p style = 'color: white;'>{{ assignment.description }}</p><br><br><br>
+                    {% if assignment.done %}
+                        <a class = "btn btn-danger" href = "/homework/undone/{{ assignment.id }}">Mark Assignment as not Done</a>
+                    {% elif assignment.linked_model_assignment %}
+                        <a class = "btn btn-success" href = "/homework/done/{{ assignment.id }}">Mark Assignment as Done</a>
+                    {% else %}
+                </center>
+                    <center><h1>Done <span class="badge badge-secondary">{{doneC}}</span></h1></center>
+                    {% for student in done %}
+                        <div class="card class-card">
+                          <div class="card-body">
+                            <a>{{student.user.first_name}}</a>
+                            <a href = "/homework/undone/{{student.id}}" title = "Un-Submit" class = "btn btn-dark">-✓</a>
+                          </div>
+                        </div>
+                    {% endfor %}
+                    <center><h1>Assigned <span class="badge badge-secondary">{{notdoneC}}</span></h1></center>
+                    {% for student in notdone %}
+                        <div class="card class-card">
+                          <div class="card-body">
+                            <a>{{student.user.first_name}}</a>
+                            <a href = "/homework/done/{{student.id}}" title = "Submit" class = "btn btn-success">✓</a>
+                          </div>
+                        </div>
+                    {% endfor %}
                 {% endif %}
             </div>
           </div>
