--- a/pages/templates/teacherAssignment_edit.html
+++ b/pages/templates/teacherAssignment_edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Assign an Assignment</title>
+	<title>Edit an Assignment</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 <!--===============================================================================================-->
@@ -34,29 +34,33 @@
 			<form method="POST" class="contact100-form validate-form">
 				{% csrf_token %}
 				<span class="contact100-form-title">
-					Assign an Assignment
+					Edit {{assignment.name}}
 				</span>
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter a valid assignment name">
-					<input class="input100" id="name" type="text" name="name" placeholder="Assignment Name" data-bv-field="name">
+					<input class="input100" id="name" value = "{{ assignment.name }}" type="text" name="name" placeholder="Assignment Name" data-bv-field="name">
 				</div>
 
 				<div id="dropDownSelect1">
-					<select class = "wrap-input100" name = "class" required>
-						<option selected disabled>Select a Class</option>
+					<select class = "wrap-input100" name = "class">
+						<option disabled>Select a Class</option>
 						{% for class in classes %}
-						<option value = "{{class.id}}">{{class.name}}</option>
+                            {% if assignment.linked_class.id == class.id %}
+						        <option value = "{{class.id}}" selected>{{class.name}}</option>
+                            {% else %}
+                                <option value = "{{class.id}}">{{class.name}}</option>
+                            {% endif %}
 						{% endfor %}
 					</select>
 				</div>
 
 				<div class="wrap-input100 validate-input" data-validate = "Please enter a valid descripion">
-					<textarea class="input100" id = 'description' type="text" name="description" placeholder="Description" data-bv-field="description"></textarea>
+					<textarea class="input100" id = 'description' type="text" name="description" placeholder="Description" data-bv-field="description">{{ assignment.description }}</textarea>
 				</div>
 
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn" type = "submit" value="Submit" id="submit-btn" name="btnSubmit">
-							Create
+							Change
 					</button>
 				</div>
 			</form>
