--- a/static/style.css
+++ b/static/style.css
@@ -25,3 +25,7 @@
         transform: scale(1.1, 1.1);
         box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), -5px -5px 30px 15px rgba(0,0,0,0.22);
 }
+
+h1{
+    text-align: center;
+}
