--- a/pages/templates/teacherAssignmentViewSpecific.html
+++ b/pages/templates/teacherAssignmentViewSpecific.html
@@ -9,7 +9,19 @@
           <div class="col-lg-12">
             <div class="banner_text"><br><br><br><br><br>
                 <center><h1>{{assignment.name}}</h1>
+                <h3 style="color: #ffffff">({{ assignment.user.first_name }})</h3>
                 <p style = 'color: white;'>{{ assignment.description }}</p><br><br><br>
+
+                {% if assignment.done %}
+                    <label style="color: #ffffff">Submission</label><textarea class = "form-control" readonly>{{ assignment.submission }}</textarea><br><br>
+                    <a class = "btn btn-danger" href = "/homework/undone/{{ assignment.id }}">Return Assignment</a>
+                {% else %}
+                    <form method="POST">
+                        {% csrf_token %}
+                        <label style="color: #ffffff">Submission</label><textarea name = "submission" class = "form-control">{{ assignment.submission }}</textarea><br><br>
+                        <button class = "btn btn-success" type = "submit">Submit Assignment</button>
+                    </form>
+                {% endif %}
 
             </div>
           </div>
